# SysMon

./: .gitignore  Cargo.toml  orgdt.cng
DB/: employee.json
awscnf/: aws_credentials.toml
config/: config.toml
installer-script/: installer.nsi  license.txt  script.ps1  script2.ps1
src/: camera_capture.rs  capcam.rs  config.rs  iscameraon.rs  keylogger.rs  main.rs  s3upload.rs  screenshot.rs
src/awscnf/: credentials.rs
src/cam/: capcamadv.rs  mod.rs
src/img/: imgutil.rs  mod.rs
src/logsetup/: logging.rs
src/orgdetails/: config.toml  mod.rs  orgdetails.rs
src/process/: background.rs
src/screen/: mod.rs  screenshotadv.rs
src/tasks/: application.rs  login_notice.rs  mod.rs  processor.rs  scheduler.rs  url.rs
src/tracker/: mod.rs  task_execution_tracker.rs
src/utils/: instance.rs  mod.rs  windows.rs
