[package]
name = "SysMon"
version = "0.1.0"
edition = "2021"

[dependencies]
config = "0.13"
rdev = "0.4"
winapi = { version = "0.3.9", features = ["winuser", "winnt", "fileapi", "handleapi", "wingdi"] }

windows = { version = "0.48", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Security"
]}
nokhwa = { version = "0.10", features = ["input-native"] }
chrono = "0.4"
image = "0.24"
rusqlite = { version = "0.32.1", features = ["bundled"] }
lazy_static = "1.5.0"
aws-sdk-s3 = "1.66.0"
aws-config = "1.5.11"
aws-types = "1.3"
bytes = "1.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.11", features = ["json"] }
open = "5.3.1"

log = "0.4.22"
log4rs = "1.3.0"
scopeguard = "1.2.0"
ctrlc = "3.4"
fs2 = "0.4"
anyhow = "1.0.94"
rand = "0.8.5"
aes-gcm = "0.9"
futures = "0.3.31"
dirs = "5.0.1"
toml = "0.5.11"
parking_lot = "0.12.3"

[profile.release]
strip = "debuginfo"
lto = true
panic = "abort"
windows = true

[[bin]]
name = "SysMon"
path = "src/main.rs"
required-features = []
#
[package.metadata.windows]
subsystem = "windows"
version = "0.58.0"
optional = true



